<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:id="@+id/leftitem">

        <TextView
            android:id="@+id/title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/date_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/date"/>
    </LinearLayout>


    <TextView
        android:layout_alignParentRight="true"
        android:id="@+id/sum_id"
        style="@style/TextMain"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/sum"/>

</RelativeLayout>