<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Container.AddBackground">

    <include layout="@layout/toolbar" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="11"

        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/summa"
            android:id="@+id/textsum"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="300"
            android:gravity="fill"
            android:layout_marginLeft="15dp"
            android:height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/noting"
            android:id="@+id/textdescrip"
            android:layout_row="1"
            android:layout_column="1"
            android:gravity="fill"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/categoriya"
            android:id="@+id/textcategoriya"
            android:layout_row="2"
            android:layout_column="1"
            android:gravity="fill"
            android:layout_marginLeft="15dp"
            android:height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/datta"
            android:id="@+id/textdata"
            android:layout_row="3"
            android:layout_column="1"
            android:gravity="fill"
            android:layout_marginLeft="15dp"
            android:height="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="300"
            android:id="@+id/sum"
            android:layout_row="0"
            android:layout_column="2"
            android:gravity="fill"
            android:inputType="number"
            android:layout_marginLeft="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/defaulttext"
            android:id="@+id/title"
            android:layout_row="1"
            android:layout_column="2"
            android:gravity="fill"
            android:inputType="text"
            android:layout_marginLeft="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Сегодня"
            android:id="@+id/enterdata"
            android:onClick="showDatePickerDialog"
            android:layout_row="3"
            android:layout_column="2"
            android:gravity="fill"
            android:clickable="true"
            android:layout_marginLeft="8dp" />

        <Spinner
            android:id="@+id/planets_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_row="2"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Invisibl"
            android:id="@+id/catgory"
            android:layout_row="2"
            android:layout_column="4"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Добавить"
            android:id="@+id/addTransaction"
            android:layout_row="4"
            android:layout_column="2"
            android:paddingRight="@dimen/pendrig" />


    </GridLayout>

</LinearLayout>
